src/app/skill-dashboard/skill-card/skill-card.component.scss
@import '../../../assets/styles/variables.scss';
@import '../../../assets/styles/common.scss';
@import '../courses.component.scss';

.container {
  max-width: 1336px !important;
}

.course-img {
  height: 292px;
  margin-right: 90px;
  border-radius: 20px;
  width: inherit;
}

.course-tile {
  max-width: 1375px;
}

.date-icon {
  width: 25px;
  height: 25px;
  margin-right: 25px;
  display: inline-block;

  &.dark {
    background: url("../../../assets/images/date-icon-black.png") no-repeat;
  }
}

.link-icon {
  width: 20px;
  height: 20px;
  margin-left: 20px;
  display: inline-block;
  background: url("../../../assets/images/link-icon.png") no-repeat;
}

.course-card {
  cursor: pointer;

  .icons {
    font-family: 'TTCommons-Medium';

    &.timer {
      border-radius: 12px;
      top: 0 !important;
      left: 10px;
      width: fit-content;
      height: max-content;
    }

    &.labelRed {
      top: 0 !important;
      right: 10px;
      height: max-content;
      background: #fff;
      color: #FF00B1;
      border-radius: 12px;
    }

    &.publisher {
      width: 100%;
      text-align: left;
    }

    &.publisher,
    &.topic-name {
      top: 80px !important;
    }
    &.topic-name {
      background: #fff;
      height: 46px;
      width: 46px;
      right: 10px;
      margin-top: -10px;
      border-radius: 50px;
      display: flex;
      align-items: center;
      justify-content: center;
      flex-wrap: wrap;
      img {
        margin-top: 12px;
      }
      span {
        font-family: $primary-font-black;
        font-size: 13px;
        color: #868686;
      }
    }
  }
}


.course-highlight {
  color: $white;

  li {
    list-style-image: url('../../../assets/images/course-list-icon.svg');
    font-family: $primary-font-regular;
    font-size: 16px;
    line-height: 40px;
    padding: 0px 10px;
  }
}

.course-tile-bg {
  background: url('../../../assets/images/skillstudio/card-1.png') no-repeat;
  height: 104px;
  width: 100%;
  background-size: cover;
}

.tekbyte-tile-bg {
  background: url('../../../assets/images/skillstudio/card-2.png') no-repeat;
  height: 104px;
  width: 100%;
  background-size: cover;
}
.events-tile-bg {
  background: url('../../../assets/images/skillstudio/card-3.png') no-repeat;
  height: 104px;
  width: 100%;
  background-size: cover;
}
.interview.prep-tile-bg, .book-tile-bg {
  background: url('../../../assets/images/skillstudio/card-4.png') no-repeat;
  height: 104px;
  width: 100%;
  background-size: cover;
}
.newsletter-tile-bg {
  background: url('../../../assets/images/skillstudio/card-5.png') no-repeat;
  height: 104px;
  width: 100%;
  background-size: cover;
}
.video-tile-bg, .podcast-tile-bg {
  background: url('../../../assets/images/skillstudio/card-6.png') no-repeat;
  height: 104px;
  width: 100%;
  background-size: cover;
}
.research.paper-tile-bg {
  background: url('../../../assets/images/skillstudio/card-7.png') no-repeat;
  height: 104px;
  width: 100%;
  background-size: cover;
}
.recorded.event-tile-bg {
  background: url('../../../assets/images/skillstudio/card-8.png') no-repeat;
  height: 104px;
  width: 100%;
  background-size: cover;
}

